# url-shortener

./: .env.example  .flake8  pyproject.toml  requirements.txt  settings.py
migrations/versions/: cafdccc49ba3_initial.py
yacut/: __init__.py  api_views.py  error_handlers.py  exceptions.py  forms.py  models.py  utils.py  views.py
yacut/templates/: 404.html  500.html  base.html  header.html  index.html
