[tool.poetry]
name = "yacut"
version = "0.1.0"
description = "сервис YaCut - генерация коротких ссылок"
authors = ["Aleksandr Bondarenko <dcomrad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "0.19.2"
flask = "^2.2.3"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
python = "^3.10"
flake8 = "5.0.4"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^0.6.0"
flake8-builtins = "^2.1.0"
flake8-class-attributes-order = "^0.1.3"
flake8-isort = "^6.0.0"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.5"
isort = "^5.12.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
